<resources>
    <string name="app_name">Sphynx</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login_button">Entrar</string>
    <string name="logo_desc">Logo: Silhueta de um gato da raça sphynx com o rosto virado para o lado direito</string>
    <string name="empty_login">E-mail não pode estar vazio</string>
    <string name="empty_password">Senha não pode estar vazia</string>
    <string name="ok">Ok</string>
    <string name="acess_register">Registros de Acesso</string>
    <string name="acess_register_view_all">Todos os registros</string>
    <string name="users">Usuários</string>
    <string name="acess_register_view_date">Registros por data</string>
    <string name="acess_register_view_local">Registros por local</string>
    <string name="acess_register_view_user">Registros por usuário</string>
</resources>