<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/background_bright">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_desc" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:padding="20dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/fields"
            android:id="@+id/username_input"
            android:autofillHints="E-mail do usuário" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:padding="20dp"
            android:inputType="textPassword"
            android:background="@drawable/fields"
            android:id="@+id/password_input"
            android:autofillHints="Senha do usuário" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <Button
        android:id="@+id/login_button"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/login_button"
        android:textSize="20sp"
        android:background="@drawable/fields"/>

    </LinearLayout>

</RelativeLayout>
